update sta and lab

--- a/laboratory_detail.html
+++ b/laboratory_detail.html
@@ -67,8 +67,7 @@
 		<!--Demo script [ DEMONSTRATION ]-->
 		<script src="js/demo/nifty-demo.min.js"></script>
 
-		<!--Bootstrap Table Sample [ SAMPLE ]-->
-		<script src="js/demo/tables-bs-table.js"></script>
+		<script src="js/atits_pc_js/laboratory_detail.js"></script>
 
 		<!--X-editable [ OPTIONAL ]-->
 		<script src="plugins/x-editable/js/bootstrap-editable.min.js"></script>
@@ -76,53 +75,18 @@
 		<!--Bootstrap Table [ OPTIONAL ]-->
 		<script src="plugins/bootstrap-table/bootstrap-table.min.js"></script>
 
-		<!--Bootstrap Table Extension [ OPTIONAL ]-->
-		<script src="plugins/bootstrap-table/extensions/editable/bootstrap-table-editable.js"></script>
-
 		<!--Summernote [ OPTIONAL ]-->
 		<script src="plugins/summernote/summernote.min.js"></script>
-		<!--=================================================-->
-		<!--Form File Upload [ SAMPLE ]-->
-		<script src="js/demo/form-text-editor.js"></script>
-		<!--Demo script [ DEMONSTRATION ]-->
+
 
 		<!--Dropzone [ OPTIONAL ]-->
 		<script src="plugins/dropzone/dropzone.min.js"></script>
 
-		<!--Form File Upload [ SAMPLE ]-->
-		<script src="js/demo/form-file-upload.js"></script>
 
 		<!--Bootbox Modals [ OPTIONAL ]-->
 		<script src="plugins/bootbox/bootbox.min.js"></script>
 
-		<!--Modals [ SAMPLE ]-->
-		<script src="js/demo/ui-modals.js"></script>
 
-		<!--=================================================
-
-    REQUIRED
-    You must include this in your project.
-
-
-    RECOMMENDED
-    This category must be included but you may modify which plugins or components which should be included in your project.
-
-
-    OPTIONAL
-    Optional plugins. You may choose whether to include it in your project or not.
-
-
-    DEMONSTRATION
-    This is to be removed, used for demonstration purposes only. This category must not be included in your project.
-
-
-    SAMPLE
-    Some script samples which explain how to initialize plugins or components. This category should not be included in your project.
-
-
-    Detailed information and more samples can be found in the document.
-
-    =================================================-->
 		<link id="theme" href="css/themes/type-a/theme-dark.min.css" rel="stylesheet">
 
 	</head>
@@ -437,15 +401,12 @@
 											<li class="previous">
 												<a href="laboratory.html"><i class="demo-psi-arrow-left"></i> 返回</a>
 											</li>
-											<!--<li class="next">
-								<a href="#">Next <i class="demo-psi-arrow-right"></i></a>
-							</li>-->
 										</ul>
 										<div class="col-lg-10 col-lg-offset-1 ">
 											<div class="panel panel-trans ">
 												<div class="panel-heading ">
 													<!--<h2 class="panel-title">小麦产业技术体系简介与组织架构</h2>-->
-													<h1 class="text-main">专用水稻产业化技术研究室 </h1>
+													<h1 class="text-main" id="name"></h1>
 												</div>
 												<h1 class="text-main ">
 													<small>基本内容展示:</small>
@@ -453,36 +414,31 @@
 												<div style="text-indent:2em;">
 													<h1 class="text-main">
 														<small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>建设依托单位：&nbsp;&nbsp;</small>
-														<small>安徽省农业科学院</small>
+														<small id="company"></small>
 						            				</h1>
 												</div>
 												<div style="text-indent:2em;">
 													<h1 class="text-main">
 														<small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>所属体系：&nbsp;&nbsp;</small>
-														<small>水稻产业技术体系</small>
+														<small id="systemName"></small>
 						            				</h1>
 												</div>
 												<div style="text-indent:2em;">
 													<h1 class="text-main">
 														<small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>研究室主任：&nbsp;&nbsp;</small>
-														<small>李泽福（兼） </small>
+														<small id="job_expert"></small>
 						            				</h1>
 												</div>
 												<div style="text-indent:2em;">
 													<h1 class="text-main">
 														<small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>岗位专家：&nbsp;&nbsp;</small>
-														<small> 石英尧     </small>
+														<small id="research_director"></small>
 						            				</h1>
 												</div>
 												<div style="text-indent:2em;">
 													<h1 class="text-main">
 														<small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>基本信息：&nbsp;&nbsp;</small>
-														<small> 安徽省农业委员会关于水稻等15个产业 技术体系组织架构和成员名单的公示
-															根据《安徽省现代农业产业技术体系十三五建设实施方案》（皖农科〔2016〕18号）、《安徽省现代农业产业技术体系专家暂行管理办法》（皖农科〔2016〕20号）、《安徽省农业
-															委员会关于推荐省现代农业产业技术体系专家的通知》（皖农科函〔2016〕139号）等相关文件要求，
-															经过酝酿提名、专家论证、征求意见等程序，产生了水稻等15个产业技术体系组织架构和成员名单（附后），现进行公示，公示时间5天。公示期间，
-															如有异议，请予反映。      
-														</small>
+														<small id="content"></small>
 						            				</h1>
 												</div>
 											</div>
@@ -502,77 +458,7 @@
 				<!--===================================================-->
 				<!--END CONTENT CONTAINER-->
 
-				<div id="demo-lg-modal" class="modal fade" tabindex="-1">
-					<div class="modal-dialog modal-lg">
-						<div class="modal-content">
-							<div class="modal-header">
-								<button type="button" class="close" data-dismiss="modal"><i class="pci-cross pci-circle"></i></button>
-								<h4 class="modal-title" id="myLargeModalLabel">添加</h4>
-							</div>
-							<div class="modal-body">
-								<form class="form-horizontal">
-									<div class="panel-body">
-										<div class="form-group">
-											<label class="col-sm-3 control-label">
-                                        	体系名称
-                                    </label>
-											<div class="col-sm-6">
-												<input class="form-control input-sm" placeholder="" type="text">
-											</div>
-										</div>
-										<div class="form-group">
-											<label class="col-sm-3 control-label">
-                                        	首席专家
-                                    </label>
-											<div class="col-sm-6">
-												<input class="form-control input-sm" placeholder="" type="text">
-											</div>
-										</div>
-										<div class="form-group">
-											<label class="col-sm-3 control-label">
-                                        	副首席专家
-                                    </label>
-											<div class="col-sm-6">
-												<input class="form-control input-sm" placeholder="" type="text">
-											</div>
-										</div>
-										<div class="form-group">
-											<label class="col-sm-3 control-label">
-                                        	产业概况
-                                    </label>
-											<div class="col-sm-6">
-												<textarea placeholder="500字以内" rows="6" class="form-control"></textarea>
-											</div>
-										</div>
-									</div>
-									<div id="page-content">
-										<div class="panel">
-											<div class="panel-heading">
-												<h3 class="panel-title">体系简介</h3>
-											</div>
-											<div class="panel-body">
 
-												<!--Summernote-->
-												<!--===================================================-->
-												<div id="demo-summernote">
-													<h4><span style="color: rgb(206, 198, 206); font-family: inherit; line-height: 1.1;">请在这写!</span><br></h4>
-													<h4><font color="#9c9c94"></font></h4>
-												</div>
-												<!--===================================================-->
-												<!-- End Summernote -->
-
-											</div>
-										</div>
-									</div>
-									<div class="panel-footer text-right">
-										<button class="btn btn-info middle " data-dismiss="modal">退出</button>
-										<button class="btn btn-primary middle">添加</button>
-									</div>
-								</form>
-							</div>
-						</div>
-					</div>
-				</div>
 
 				<!--MAIN NAVIGATION-->
 				<!--===================================================-->
@@ -591,10 +477,12 @@
 										<div class="profile-wrap">
 											<div class="pad-btm">
 												<span class="label label-success pull-right">New</span>
-												<img class="img-circle img-sm img-border" src="img/profile-photos/1.png" alt="Profile Picture">
+												<img class="img-circle img-sm img-border" src="img/profile-photos/1.png"
+													 alt="Profile Picture">
 											</div>
-											<a href="#profile-nav" class="box-block" data-toggle="collapse" aria-expanded="false">
-												<span class="pull-right dropdown-toggle">
+											<a href="#profile-nav" class="box-block" data-toggle="collapse"
+											   aria-expanded="false">
+                                            <span class="pull-right dropdown-toggle">
                                                 <i class="dropdown-caret"></i>
                                             </span>
 												<p class="mnp-name">Aaron Chavez</p>
@@ -629,7 +517,7 @@
 										</li>
 
 										<!--Menu list item-->
-										<li>
+										<li style="display: none" id="person">
 											<a href="user.html">
 												<i class="demo-psi-home"></i>
 												<span class="menu-title">
@@ -639,7 +527,7 @@
 										</li>
 
 										<!--Menu list item-->
-										<li>
+										<li style="display: none" id="system">
 											<a href="system.html">
 												<i class="demo-psi-home"></i>
 												<span class="menu-title">
@@ -649,7 +537,7 @@
 										</li>
 
 										<!--Menu list item-->
-										<li>
+										<li class="active" style="display: none" id="lab">
 											<a href="laboratory.html">
 												<i class="demo-psi-home"></i>
 												<span class="menu-title">
@@ -659,7 +547,7 @@
 										</li>
 
 										<!--Menu list item-->
-										<li>
+										<li style="display: none" id="sta">
 											<a href="station.html">
 												<i class="demo-psi-home"></i>
 												<span class="menu-title">
@@ -687,6 +575,7 @@
 											</span>
 											</a>
 										</li>
+
 
 										<!--Menu list item-->
 										<li>
@@ -719,7 +608,7 @@
 
 										<!--Menu list item-->
 										<li>
-											<a href="regulation.html">
+											<a href="#">
 												<i class="demo-psi-home"></i>
 												<span class="menu-title">
 												<strong>规章制度</strong>
@@ -728,7 +617,7 @@
 										</li>
 										<!--Menu list item-->
 										<li>
-											<a href="sys_task.html">
+											<a href="task.html">
 												<i class="demo-psi-home"></i>
 												<span class="menu-title">
 												<strong>工作任务</strong>
@@ -738,7 +627,7 @@
 
 										<!--Menu list item-->
 										<li>
-											<a href="task_progress.html">
+											<a href="taskProgress.html">
 												<i class="demo-psi-home"></i>
 												<span class="menu-title">
 												<strong>工作进展</strong>
@@ -747,7 +636,7 @@
 										</li>
 										<!--Menu list item-->
 										<li>
-											<a href="#">
+											<a href="test_manager.html">
 												<i class="demo-psi-home"></i>
 												<span class="menu-title">
 												<strong>考评管理</strong>
@@ -756,7 +645,7 @@
 										</li>
 										<!--Menu list item-->
 										<li>
-											<a href="files.html">
+											<a href="download.html">
 												<i class="demo-psi-home"></i>
 												<span class="menu-title">
 												<strong>下载中心</strong>
@@ -773,7 +662,9 @@
 											</a>
 										</li>
 
+
 									</ul>
+
 
 								</div>
 							</div>
