--- a/station_detail.html
+++ b/station_detail.html
@@ -68,62 +68,26 @@
 		<!--Demo script [ DEMONSTRATION ]-->
 		<script src="js/demo/nifty-demo.min.js"></script>
 
-		<!--Bootstrap Table Sample [ SAMPLE ]-->
-		<script src="js/demo/tables-bs-table.js"></script>
-
+		<script src="js/atits_pc_js/station_detail.js"></script>
 		<!--X-editable [ OPTIONAL ]-->
 		<script src="plugins/x-editable/js/bootstrap-editable.min.js"></script>
 
 		<!--Bootstrap Table [ OPTIONAL ]-->
 		<script src="plugins/bootstrap-table/bootstrap-table.min.js"></script>
 
-		<!--Bootstrap Table Extension [ OPTIONAL ]-->
-		<script src="plugins/bootstrap-table/extensions/editable/bootstrap-table-editable.js"></script>
 
 		<!--Summernote [ OPTIONAL ]-->
 		<script src="plugins/summernote/summernote.min.js"></script>
-		<!--=================================================-->
-		<!--Form File Upload [ SAMPLE ]-->
-		<script src="js/demo/form-text-editor.js"></script>
 		<!--Demo script [ DEMONSTRATION ]-->
 
 		<!--Dropzone [ OPTIONAL ]-->
 		<script src="plugins/dropzone/dropzone.min.js"></script>
 
-		<!--Form File Upload [ SAMPLE ]-->
-		<script src="js/demo/form-file-upload.js"></script>
 
 		<!--Bootbox Modals [ OPTIONAL ]-->
 		<script src="plugins/bootbox/bootbox.min.js"></script>
 
-		<!--Modals [ SAMPLE ]-->
-		<script src="js/demo/ui-modals.js"></script>
 
-		<!--=================================================
-
-    REQUIRED
-    You must include this in your project.
-
-
-    RECOMMENDED
-    This category must be included but you may modify which plugins or components which should be included in your project.
-
-
-    OPTIONAL
-    Optional plugins. You may choose whether to include it in your project or not.
-
-
-    DEMONSTRATION
-    This is to be removed, used for demonstration purposes only. This category must not be included in your project.
-
-
-    SAMPLE
-    Some script samples which explain how to initialize plugins or components. This category should not be included in your project.
-
-
-    Detailed information and more samples can be found in the document.
-
-    =================================================-->
 		<link id="theme" href="css/themes/type-a/theme-dark.min.css" rel="stylesheet">
 
 	</head>
@@ -409,89 +373,67 @@
 					<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
 					<!--End page title-->
 
-					<!--Breadcrumb-->
-					<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-					<!--<ol class="breadcrumb">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Tables</a></li>
-					<li class="active">Bootstrap Tables</li>
-                </ol>-->
-					<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-					<!--End breadcrumb-->
-
-					<!--Page content-->
+					<!--Custom Toolbar-->
 					<!--===================================================-->
-					<div id="page-content">
+					<div class="panel col-lg-10">
+						<!--<div class="panel-heading">
+							<h3 class="panel-title">功能研究室详情</h3>
+						</div>-->
+						<div class="panel-body">
 
-						<!--Custom Toolbar-->
-						<!--===================================================-->
-						<div class="panel col-lg-10">
-							<!--<div class="panel-heading">
-								<h3 class="panel-title">功能研究室详情</h3>
-							</div>-->
-							<div class="panel-body">
+							<div id="page-content ">
 
-								<div id="page-content ">
-
-									<div class="row ">
-										<ul class="pager pager-rounded">
-											<li class="previous">
-												<a href="station.html"><i class="demo-psi-arrow-left"></i> 返回</a>
-											</li>
-											<!--<li class="next">
-								<a href="#">Next <i class="demo-psi-arrow-right"></i></a>
-							</li>-->
-										</ul>
-										<div class="col-lg-10 col-lg-offset-1 ">
-											<div class="panel panel-trans ">
-												<div class="panel-heading ">
-													<!--<h2 class="panel-title">小麦产业技术体系简介与组织架构</h2>-->
-													<h1 class="text-main">庐江综合试验站</h1>
-												</div>
-												<h1 class="text-main ">
-													<small>基本内容展示:</small>
-						            			</h1>
-												<div style="text-indent:2em;">
-													<h1 class="text-main">
-														<small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>建设依托单位：&nbsp;&nbsp;</small>
-														<small>庐江县农业技术推广中心</small>
-						            				</h1>
-												</div>
-												<div style="text-indent:2em;">
-													<h1 class="text-main">
-														<small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>所属体系：&nbsp;&nbsp;</small>
-														<small>水稻产业技术体系</small>
-						            				</h1>
-												</div>
-												<div style="text-indent:2em;">
-													<h1 class="text-main">
-														<small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>综合试验站站长：&nbsp;&nbsp;</small>
-														<small>吕和平</small>
-						            				</h1>
-												</div>
-												<div style="text-indent:2em;">
-													<h1 class="text-main">
-														<small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>基本信息：&nbsp;&nbsp;</small>
-														<small> 安徽省农业委员会关于水稻等15个产业 技术体系组织架构和成员名单的公示
-															根据《安徽省现代农业产业技术体系十三五建设实施方案》（皖农科〔2016〕18号）、《安徽省现代农业产业技术体系专家暂行管理办法》（皖农科〔2016〕20号）、《安徽省农业
-															委员会关于推荐省现代农业产业技术体系专家的通知》（皖农科函〔2016〕139号）等相关文件要求，
-															经过酝酿提名、专家论证、征求意见等程序，产生了水稻等15个产业技术体系组织架构和成员名单（附后），现进行公示，公示时间5天。公示期间，
-															如有异议，请予反映。      
-														</small>
-						            				</h1>
-												</div>
+								<div class="row ">
+									<ul class="pager pager-rounded">
+										<li class="previous">
+											<a href="station.html"><i class="demo-psi-arrow-left"></i> 返回</a>
+										</li>
+										<!--<li class="next">
+							<a href="#">Next <i class="demo-psi-arrow-right"></i></a>
+						</li>-->
+									</ul>
+									<div class="col-lg-10 col-lg-offset-1 ">
+										<div class="panel panel-trans ">
+											<div class="panel-heading ">
+												<!--<h2 class="panel-title">小麦产业技术体系简介与组织架构</h2>-->
+												<h1 class="text-main" id="name"></h1>
+											</div>
+											<h1 class="text-main ">
+												<small>基本内容展示:</small>
+											</h1>
+											<div style="text-indent:2em;">
+												<h1 class="text-main">
+													<small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>建设依托单位：&nbsp;&nbsp;</small>
+													<small id="company"></small>
+												</h1>
+											</div>
+											<div style="text-indent:2em;">
+												<h1 class="text-main">
+													<small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>所属体系：&nbsp;&nbsp;</small>
+													<small id="systemName"></small>
+												</h1>
+											</div>
+											<div style="text-indent:2em;">
+												<h1 class="text-main">
+													<small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>综合试验站站长：&nbsp;&nbsp;</small>
+													<small id="station_master"></small>
+												</h1>
+											</div>
+											<div style="text-indent:2em;">
+												<h1 class="text-main">
+													<small style="color:dodgerblue;"><i class="fa fa-sitemap">&nbsp;&nbsp;</i>基本信息：&nbsp;&nbsp;</small>
+													<small id="content"></small>
+												</h1>
 											</div>
 										</div>
 									</div>
-
 								</div>
+
 							</div>
 						</div>
-						<!--===================================================-->
-
 					</div>
 					<!--===================================================-->
-					<!--End page content-->
+
 
 				</div>
 				<!--===================================================-->
@@ -586,10 +528,12 @@
 										<div class="profile-wrap">
 											<div class="pad-btm">
 												<span class="label label-success pull-right">New</span>
-												<img class="img-circle img-sm img-border" src="img/profile-photos/1.png" alt="Profile Picture">
+												<img class="img-circle img-sm img-border" src="img/profile-photos/1.png"
+													 alt="Profile Picture">
 											</div>
-											<a href="#profile-nav" class="box-block" data-toggle="collapse" aria-expanded="false">
-												<span class="pull-right dropdown-toggle">
+											<a href="#profile-nav" class="box-block" data-toggle="collapse"
+											   aria-expanded="false">
+                                            <span class="pull-right dropdown-toggle">
                                                 <i class="dropdown-caret"></i>
                                             </span>
 												<p class="mnp-name">Aaron Chavez</p>
@@ -624,7 +568,7 @@
 										</li>
 
 										<!--Menu list item-->
-										<li>
+										<li style="display: none" id="person">
 											<a href="user.html">
 												<i class="demo-psi-home"></i>
 												<span class="menu-title">
@@ -634,7 +578,7 @@
 										</li>
 
 										<!--Menu list item-->
-										<li>
+										<li style="display: none" id="system">
 											<a href="system.html">
 												<i class="demo-psi-home"></i>
 												<span class="menu-title">
@@ -644,7 +588,7 @@
 										</li>
 
 										<!--Menu list item-->
-										<li>
+										<li class="active" style="display: none" id="lab">
 											<a href="laboratory.html">
 												<i class="demo-psi-home"></i>
 												<span class="menu-title">
@@ -654,7 +598,7 @@
 										</li>
 
 										<!--Menu list item-->
-										<li>
+										<li style="display: none" id="sta">
 											<a href="station.html">
 												<i class="demo-psi-home"></i>
 												<span class="menu-title">
@@ -682,6 +626,7 @@
 											</span>
 											</a>
 										</li>
+
 
 										<!--Menu list item-->
 										<li>
@@ -714,7 +659,7 @@
 
 										<!--Menu list item-->
 										<li>
-											<a href="regulation.html">
+											<a href="#">
 												<i class="demo-psi-home"></i>
 												<span class="menu-title">
 												<strong>规章制度</strong>
@@ -723,7 +668,7 @@
 										</li>
 										<!--Menu list item-->
 										<li>
-											<a href="sys_task.html">
+											<a href="task.html">
 												<i class="demo-psi-home"></i>
 												<span class="menu-title">
 												<strong>工作任务</strong>
@@ -733,7 +678,7 @@
 
 										<!--Menu list item-->
 										<li>
-											<a href="task_progress.html">
+											<a href="taskProgress.html">
 												<i class="demo-psi-home"></i>
 												<span class="menu-title">
 												<strong>工作进展</strong>
@@ -742,7 +687,7 @@
 										</li>
 										<!--Menu list item-->
 										<li>
-											<a href="#">
+											<a href="test_manager.html">
 												<i class="demo-psi-home"></i>
 												<span class="menu-title">
 												<strong>考评管理</strong>
@@ -751,7 +696,7 @@
 										</li>
 										<!--Menu list item-->
 										<li>
-											<a href="files.html">
+											<a href="download.html">
 												<i class="demo-psi-home"></i>
 												<span class="menu-title">
 												<strong>下载中心</strong>
@@ -768,7 +713,9 @@
 											</a>
 										</li>
 
+
 									</ul>
+
 
 								</div>
 							</div>
